--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -279,6 +279,11 @@ on boot
     setprop net.tcp.buffersize.edge    4093,26280,35040,4096,16384,35040
     setprop net.tcp.buffersize.gprs    4092,8760,11680,4096,8760,11680
 
+# Run sysinit
+    exec /system/bin/sysinit
+
+    class_start default
+
 # Set this property so surfaceflinger is not started by system_init
     setprop system_init.startsurfaceflinger 0
 
